--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ PORT=3000
 
 MYSQL_HOST=""
 MYSQL_PORT=0
-MYSQL_USERNAME=""
-MYSQL_PASSWORD=""
-MYSQL_DATABASE=""
+DB_PASS="anye@123"
+MYSQL_USER="italo"
+MYSQL_PASSWORD="Senha@123"
+DB_DATABASE="consulta-SQL"
